# OpenGL-SDL2

./: CMakeLists.txt  README.md  main.cpp
glad/: CMakeLists.txt
